--- a/index.html
+++ b/index.html
@@ -12,11 +12,26 @@
 </head>
 <body>
     <div class="video-bgr standart-width"></div>
-    <div class="main-block-design standart-width">
-        <h2 class="capture-name-block">NEW DESIGN</h2>
-        <h1 class="capture-block-about dotted-after-content">There is no other platforms for you as like</h1>
-        <p class="main-block-text">Aeneans eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod semper.</p>
-        <p class="main-block-text">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
+    <div class="after-block-styled">
+        <div class="main-block-design standart-width">
+            <h2 class="capture-name-block">NEW DESIGN</h2>
+            <h1 class="capture-h1 dotted-after-content">There is no other platforms for you as like</h1>
+            <p class="main-block-text aligh-left">Aeneans eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod semper.</p>
+            <p class="main-block-text aligh-left">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
+        </div>
+    </div>
+    <div class="features-block standart-width">
+            <h2 class="capture-name-block aligh-left">NEW FEATURES</h2>
+            <h1 class="capture-h1">Some awesone features</h1>
+            <div class="container-feature-items">
+                <div class="feature-item">
+                    <div class="feature-item-img feature-item-img-photos"></div>
+                    <h3 class="capture-h3">Some awesone features</h1>
+                    <p class="main-block-text">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
+                </div>
+                <div class="feature-item"></div>
+                <div class="feature-item"></div>
+            </div>
     </div>
 
       
