--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="fonts/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
     <script src="bundle.js"></script>
+    <link rel="stylesheet" href="css/main.css">
     <title>Corporate Landing Page</title>
 </head>
 <body>
@@ -20,7 +20,8 @@
             <p class="main-block-text aligh-left">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
         </div>
     </div>
-    <div class="features-block standart-width">
+    <div class="features-block">
+        <div class="container-feature-info">
             <h2 class="capture-name-block aligh-left">NEW FEATURES</h2>
             <h1 class="capture-h1">Some awesone features</h1>
             <div class="container-feature-items">
@@ -29,9 +30,40 @@
                     <h3 class="capture-h3">Some awesone features</h1>
                     <p class="main-block-text">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
                 </div>
-                <div class="feature-item"></div>
-                <div class="feature-item"></div>
+                <div class="feature-item">
+                    <div class="feature-item-img feature-item-img-fly"></div>
+                    <h3 class="capture-h3">Some awesone features</h1>
+                    <p class="main-block-text">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-item-img feature-item-img-lamp"></div>
+                    <h3 class="capture-h3">Some awesone features</h1>
+                    <p class="main-block-text">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
+                </div>
             </div>
+        </div>
+    </div>
+
+    <div class="designe-block">
+        <div class="laptop-block"></div>
+        <div class="designe-block-item">
+            <h2 class="capture-name-block">NEW DESIGN</h2>
+            <h1 class="capture-h1 aligh-left dotted-after-content">Resposive design, just need your tap</h1>
+            <p class="main-block-text aligh-left">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn. Vestibulum felis euismod semper.</p>
+        </div>
+    </div>
+
+    <div class="client-info">
+        <div class="wrapper-client-about">
+            <div class="client-about-item">
+                <img src="images/photo-client.jpg" alt="photo-client" class="photo-client">
+                <p class="client-name"></p>
+                <p class="client-status"></p>
+
+
+            </div>
+
+        </div>
     </div>
 
       
