--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <div class="video-bgr standart-width"></div>
-    <div class="after-block-styled">
-        <div class="main-block-design standart-width">
+    <div class="bg-block-styled">
+        <div class="block-about-platform">
             <h2 class="capture-name-block">NEW DESIGN</h2>
-            <h1 class="capture-h1 dotted-after-content">There is no other platforms for you as like</h1>
+            <h1 class="capture-h1 aligh-left dotted-after-content">There is no other platforms for you as like</h1>
             <p class="main-block-text aligh-left">Aeneans eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod semper.</p>
             <p class="main-block-text aligh-left">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
         </div>
@@ -57,12 +57,36 @@
         <div class="wrapper-client-about">
             <div class="client-about-item">
                 <img src="images/photo-client.jpg" alt="photo-client" class="photo-client">
-                <p class="client-name"></p>
-                <p class="client-status"></p>
-
-
+                <p class="client-name">Jonathon Doe</p>
+                <p class="client-status">Co Founder</p>
+                <p class="client-quote">“Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id gravida at eget metus. Etiasem malesuada magn”</p>
             </div>
+            <div class="client-about-item">
+                <img src="images/photo-client.jpg" alt="photo-client" class="photo-client">
+                <p class="client-name">Jonathon Doe</p>
+                <p class="client-status">Co Founder</p>
+                <p class="client-quote">“Pellentesque ornare sem lacinia quam. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn”</p>
+            </div>
+            <div class="client-about-item">
+                <img src="images/photo-client.jpg" alt="photo-client" class="photo-client">
+                <p class="client-name">Jonathon Doe</p>
+                <p class="client-status">Co Founder</p>
+                <p class="client-quote">“Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id gravida at eget metus. Etiasem malesuada magn”</p>
+            </div>
+        </div>
+        <div class="sponsor-links">
+            <a href="#" class="sponsor-links-href"><img class="sponsor-links-img" src="images/sponsor-1.png" alt=""></a>
+            <a href="#" class="sponsor-links-href"><img class="sponsor-links-img" src="images/sponsor-2.png" alt=""></a>
+            <a href="#" class="sponsor-links-href"><img class="sponsor-links-img" src="images/sponsor-3.png" alt=""></a>
+            <a href="#" class="sponsor-links-href"><img class="sponsor-links-img" src="images/sponsor-4.png" alt=""></a>
+            <a href="#" class="sponsor-links-href"><img class="sponsor-links-img" src="images/sponsor-5.png" alt=""></a>
+        </div>
+    </div>
 
+    <div class="awesome-features-block">
+        <div class="container-awesome-feature-info">
+            <h2 class="capture-name-block aligh-left">NEW FEATURES</h2>
+            <h1 class="capture-h1">Some awesone features</h1>
         </div>
     </div>
 
