--- a/index.html
+++ b/index.html
@@ -87,7 +87,33 @@
         <div class="container-awesome-feature-info">
             <h2 class="capture-name-block aligh-left">NEW FEATURES</h2>
             <h1 class="capture-h1">Some awesone features</h1>
+            <p class="main-block-text">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn. Vestibulum felis euismod semper.</p>
         </div>
+        <img src="images/brouser.png" class="brouser-img" alt="brouser">
+    </div>
+
+    <div class="form-block">
+        <div class="form-capture">
+            <h2 class="capture-name-block">NEW FEATURES</h2>
+            <h1 class="capture-h1 alt-color-text">Over 1000 designers are using...</h1> 
+        </div>
+        <form class="form-fields">
+            <input type="text" class="form-field-input" placeholder="full name">
+            <input type="email" class="form-field-input" placeholder="your email">
+            <input type="password" class="form-field-input" placeholder="password">
+            <input type="submit" class="form-field-submit" value="try now"> 
+        </form>
+        <p class="main-block-text alt-color-text-grey margin-null">By Signing up you agree to our <a href="#" class="main-block-text alt-color-text-grey">terms & Services</a>.</p>
+    </div>
+
+    <div class="contact-block">
+        <div class="contact-block-item">
+            <h2 class="contact-block-item-capture"></h2>
+            <p class="contact-block-item-text"></p>
+        </div>
+
+
+
     </div>
 
       
