add contact block & media

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
     <title>Corporate Landing Page</title>
 </head>
 <body>
-    <div class="video-bgr standart-width"></div>
+    <div class="video-bgr">
+        <div class="wrapper-welcom-block">
+            <h1 class="main-capture">There is no other platforms for you as like </h1>
+            <div class="play-button"></div>
+            <input type="submit" class="form-field-submit extra-margin-buttom" value="try now"> 
+            <p class="main-block-text">* No need to add cards details</p>
+        </div>
+    </div>
+
     <div class="bg-block-styled">
         <div class="block-about-platform">
             <h2 class="capture-name-block">NEW DESIGN</h2>
@@ -107,13 +115,40 @@
     </div>
 
     <div class="contact-block">
-        <div class="contact-block-item">
-            <h2 class="contact-block-item-capture"></h2>
-            <p class="contact-block-item-text"></p>
+        <div class="contact-block-item contact-block-addr">
+            <h2 class="contact-block-item-capture">Start</h2>
+            <p class="contact-block-item-text">Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. USA &  CAN: 1-888-123-4567 Address: 34 Brokel Rd. NY</p>
         </div>
 
+        <div class="wrapper-menu-part-block">
+            <ul class="contact-block-item-menu">
+                <li class="contact-block-item-capture"><a href="#">Support</a></li>
+                <li class="contact-block-item-text"><a href="#">Help Center</a></li>
+                <li class="contact-block-item-text"><a href="#">Get Started</a></li>
+                <li class="contact-block-item-text"><a href="#">Contact US</a></li>
+            </ul>
 
+            <ul class="contact-block-item-menu">
+                <li class="contact-block-item-capture"><a href="#">About US</a></li>
+                <li class="contact-block-item-text"><a href="#">About Us</a></li>
+                <li class="contact-block-item-text"><a href="#">Terms of Use</a></li>
+                <li class="contact-block-item-text"><a href="#">Privacy Policy</a></li>
+            </ul>
 
+            <div class="contact-block-item">
+                <h2 class="contact-block-item-capture">Get Newsletter</h2>
+                <div class="contact-block-input-wrap">
+                    <input type="email" class="contact-block-input" placeholder="email">
+                    <submit type="submit" class="contact-block-submit" placeholder="email"></submit>
+                </div>
+                <div class="wrapper-social-icon">
+                    <i class="fa fa-dribbble custom-social-icon" aria-hidden="true"></i>
+                    <i class="fa fa-facebook custom-social-icon" aria-hidden="true"></i>
+                    <i class="fa fa-google-plus custom-social-icon" aria-hidden="true"></i>
+                    <i class="fa fa-twitter custom-social-icon" aria-hidden="true"></i>
+                </div>
+            </div>
+        </div>
     </div>
 
       
