--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="fonts/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Exo:100,400" rel="stylesheet">
     <script src="bundle.js"></script>
     <link rel="stylesheet" href="css/main.css">
     <title>Corporate Landing Page</title>
@@ -15,7 +15,7 @@
         <div class="wrapper-welcom-block">
             <h1 class="main-capture">There is no other platforms for you as like </h1>
             <div class="play-button"></div>
-            <input type="submit" class="form-field-submit extra-margin-buttom" value="try now"> 
+            <input type="submit" class="form-field-submit-start extra-margin-buttom" value="try now"> 
             <p class="main-block-text">* No need to add cards details</p>
         </div>
     </div>
@@ -109,43 +109,45 @@
             <input type="text" class="form-field-input" placeholder="full name">
             <input type="email" class="form-field-input" placeholder="your email">
             <input type="password" class="form-field-input" placeholder="password">
-            <input type="submit" class="form-field-submit" value="try now"> 
+            <input type="submit" class="form-field-submit after-arrow" value="try now"> 
         </form>
         <p class="main-block-text alt-color-text-grey margin-null">By Signing up you agree to our <a href="#" class="main-block-text alt-color-text-grey">terms & Services</a>.</p>
     </div>
 
-    <div class="contact-block">
-        <div class="contact-block-item contact-block-addr">
-            <h2 class="contact-block-item-capture">Start</h2>
-            <p class="contact-block-item-text">Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. USA &  CAN: 1-888-123-4567 Address: 34 Brokel Rd. NY</p>
-        </div>
+    <div class="contact-block-wrapper">
+        <div class="contact-block">
+            <div class="contact-block-item contact-block-addr">
+                <h2 class="contact-block-item-capture">Start</h2>
+                <p class="contact-block-item-text">Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. USA &  CAN: 1-888-123-4567 Address: 34 Brokel Rd. NY</p>
+            </div>
 
-        <div class="wrapper-menu-part-block">
-            <ul class="contact-block-item-menu">
-                <li class="contact-block-item-capture"><a href="#">Support</a></li>
-                <li class="contact-block-item-text"><a href="#">Help Center</a></li>
-                <li class="contact-block-item-text"><a href="#">Get Started</a></li>
-                <li class="contact-block-item-text"><a href="#">Contact US</a></li>
-            </ul>
+            <div class="wrapper-menu-part-block">
+                <ul class="contact-block-item-menu">
+                    <li class="contact-block-item-capture"><a href="#">Support</a></li>
+                    <li class="contact-block-item-text media-hidden"><a href="#">Help Center</a></li>
+                    <li class="contact-block-item-text media-hidden"><a href="#">Get Started</a></li>
+                    <li class="contact-block-item-text media-hidden"><a href="#">Contact US</a></li>
+                </ul>
 
-            <ul class="contact-block-item-menu">
-                <li class="contact-block-item-capture"><a href="#">About US</a></li>
-                <li class="contact-block-item-text"><a href="#">About Us</a></li>
-                <li class="contact-block-item-text"><a href="#">Terms of Use</a></li>
-                <li class="contact-block-item-text"><a href="#">Privacy Policy</a></li>
-            </ul>
+                <ul class="contact-block-item-menu">
+                    <li class="contact-block-item-capture"><a href="#">About US</a></li>
+                    <li class="contact-block-item-text media-hidden"><a href="#">About Us</a></li>
+                    <li class="contact-block-item-text media-hidden"><a href="#">Terms of Use</a></li>
+                    <li class="contact-block-item-text media-hidden"><a href="#">Privacy Policy</a></li>
+                </ul>
 
-            <div class="contact-block-item">
-                <h2 class="contact-block-item-capture">Get Newsletter</h2>
-                <div class="contact-block-input-wrap">
-                    <input type="email" class="contact-block-input" placeholder="email">
-                    <submit type="submit" class="contact-block-submit" placeholder="email"></submit>
-                </div>
-                <div class="wrapper-social-icon">
-                    <i class="fa fa-dribbble custom-social-icon" aria-hidden="true"></i>
-                    <i class="fa fa-facebook custom-social-icon" aria-hidden="true"></i>
-                    <i class="fa fa-google-plus custom-social-icon" aria-hidden="true"></i>
-                    <i class="fa fa-twitter custom-social-icon" aria-hidden="true"></i>
+                <div class="contact-block-item">
+                    <h2 class="contact-block-item-capture media-hidden">Get Newsletter</h2>
+                    <div class="contact-block-input-wrap media-hidden">
+                        <input type="email" class="contact-block-input" placeholder="email">
+                        <submit type="submit" class="contact-block-submit" placeholder="email"></submit>
+                    </div>
+                    <div class="wrapper-social-icon">
+                        <i class="fa fa-dribbble custom-social-icon" aria-hidden="true"></i>
+                        <i class="fa fa-facebook custom-social-icon" aria-hidden="true"></i>
+                        <i class="fa fa-google-plus custom-social-icon" aria-hidden="true"></i>
+                        <i class="fa fa-twitter custom-social-icon" aria-hidden="true"></i>
+                    </div>
                 </div>
             </div>
         </div>
