--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="fonts/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Exo:100,400" rel="stylesheet">
     <script src="bundle.js"></script>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Corporate Landing Page</title>
 </head>
@@ -35,17 +36,17 @@
             <div class="container-feature-items">
                 <div class="feature-item">
                     <div class="feature-item-img feature-item-img-photos"></div>
-                    <h3 class="capture-h3">Some awesone features</h1>
+                    <h3 class="capture-h3">Some awesone features</h3>
                     <p class="main-block-text">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
                 </div>
                 <div class="feature-item">
                     <div class="feature-item-img feature-item-img-fly"></div>
-                    <h3 class="capture-h3">Some awesone features</h1>
+                    <h3 class="capture-h3">Some awesone features</h3>
                     <p class="main-block-text">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
                 </div>
                 <div class="feature-item">
                     <div class="feature-item-img feature-item-img-lamp"></div>
-                    <h3 class="capture-h3">Some awesone features</h1>
+                    <h3 class="capture-h3">Some awesone features</h3>
                     <p class="main-block-text">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
                 </div>
             </div>
@@ -109,7 +110,7 @@
             <input type="text" class="form-field-input" placeholder="full name">
             <input type="email" class="form-field-input" placeholder="your email">
             <input type="password" class="form-field-input" placeholder="password">
-            <input type="submit" class="form-field-submit after-arrow" value="try now"> 
+            <div class="after-arrow"><input type="submit" class="form-field-submit" value="try now"></div>
         </form>
         <p class="main-block-text alt-color-text-grey margin-null">By Signing up you agree to our <a href="#" class="main-block-text alt-color-text-grey">terms & Services</a>.</p>
     </div>
@@ -138,15 +139,15 @@
 
                 <div class="contact-block-item">
                     <h2 class="contact-block-item-capture media-hidden">Get Newsletter</h2>
-                    <div class="contact-block-input-wrap media-hidden">
+                    <form class="contact-block-input-wrap media-hidden">
                         <input type="email" class="contact-block-input" placeholder="email">
-                        <submit type="submit" class="contact-block-submit" placeholder="email"></submit>
-                    </div>
+                        <button type="submit" class="contact-block-submit"></button> >
+                    </form>
                     <div class="wrapper-social-icon">
-                        <i class="fa fa-dribbble custom-social-icon" aria-hidden="true"></i>
-                        <i class="fa fa-facebook custom-social-icon" aria-hidden="true"></i>
-                        <i class="fa fa-google-plus custom-social-icon" aria-hidden="true"></i>
-                        <i class="fa fa-twitter custom-social-icon" aria-hidden="true"></i>
+                        <i class="fa fa-dribbble custom-social-icon-dribbble" aria-hidden="true"></i>
+                        <i class="fa fa-facebook custom-social-icon-facebook" aria-hidden="true"></i>
+                        <i class="fa fa-google-plus custom-social-icon-google" aria-hidden="true"></i>
+                        <i class="fa fa-twitter custom-social-icon-twitter" aria-hidden="true"></i>
                     </div>
                 </div>
             </div>
