--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
     <div class="contact-block-wrapper">
         <div class="contact-block">
             <div class="contact-block-item contact-block-addr">
-                <h2 class="contact-block-item-capture">Start</h2>
-                <p class="contact-block-item-text">Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. USA &  CAN: 1-888-123-4567 Address: 34 Brokel Rd. NY</p>
+                <h2 class="contact-block-item-capture logo-after">Start</h2>
+                <p class="contact-block-item-text">Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. USA &  CAN: <a class="contact-block-item-text" href="tel:18881234567">1-888-123-4567</a>, Address: 34 Brokel Rd. NY</p>
             </div>
 
             <div class="wrapper-menu-part-block">
